<resources>
    <string name="app_name">Measure Chef</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_to_and_from_metric">toAndFromMetric</string>
    <string name="to_from_metric_conversion">US/UK - Metric Conversions</string>
    <string name="dry_unit_conversion">Dry Ingredient Conversion</string>
    <string name="liquid_unit_conversion">Liquid Ingredient Conversion</string>
    <string name="oven_temp_conversion">Oven Temperature Conversion</string>
    <string name="title_activity_dry_measurements">DryMeasurements</string>
    <string name="title_activity_liquid_measurements">LiquidMeasurements</string>
    <string name="title_activity_oven_temperature_conversions">OvenTemperatureConversions</string>
    <string name="farenheit">Farenheit</string>
    <string name="celcius">Celcius</string>
    <string name="answer">answer</string>
    <string name="transparent_purple">#807e57c2</string>
    <string name="us_to_metric_conversion">Convert from US to Metric</string>
    <string name="metric_to_us">Convert from Metric to US</string>
    <string name="enter_fahrenheit_temp">Enter: F°</string>
    <string name="enter_celcius_temp">Enter C°</string>
    <string name="convert">convert</string>
    <string name="clear">clear</string>
    <string name="title_activity_activity_to_extend">ActivityToExtend</string>
</resources>
